[package]
name = "toml-schema"
version = "1.0.0-rc.1"
edition = "2021"
description = "Reference implementation of TOML Schema for Rust"
homepage = "https://tomlschema.org"
repository = "https://github.com/brunoborges/toml-schema"
license = "MIT"
publish = false

[lib]
name = "toml_schema"
path = "src/lib.rs"

[[bin]]
name = "toml-schema"
path = "src/main.rs"

[dependencies]
toml = "0.8"
regex = "1"
